# Yolov8_ros

./: README.md  yolov8_mask.sh
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/commucation_yolo/: BoundingBox.h  BoundingBoxes.h  DynamicObjects.h  mask.h
devel/lib/pkgconfig/: commucation_yolo.pc
devel/lib/python3/dist-packages/commucation_yolo/msg/: _BoundingBox.py  _BoundingBoxes.py  _DynamicObjects.py  __init__.py  _mask.py
devel/share/common-lisp/ros/commucation_yolo/msg/: BoundingBox.lisp  BoundingBoxes.lisp  DynamicObjects.lisp  _package.lisp  _package_BoundingBox.lisp  _package_BoundingBoxes.lisp  _package_mask.lisp  commucation_yolo-msg.asd  mask.lisp
devel/share/commucation_yolo/cmake/: commucation_yolo-msg-paths.cmake  commucation_yoloConfig.cmake
devel/share/gennodejs/ros/commucation_yolo/msg/: BoundingBox.js  BoundingBoxes.js  DynamicObjects.js  _index.js  mask.js
devel/share/roseus/ros/commucation_yolo/: manifest.l
devel/share/roseus/ros/commucation_yolo/msg/: BoundingBox.l  BoundingBoxes.l  DynamicObjects.l  mask.l
src/commucation_yolo/: CMakeLists.txt  package.xml
src/commucation_yolo/launch/: yolov8_mask.launch  yolov8_pub.launch
src/commucation_yolo/msg/: BoundingBox.msg  mask.msg
src/commucation_yolo/scripts/: yolo_pub.py  yolo_pub_mask.py
