<?xml version="1.0"?>
<package format="2">
  <name>commucation_yolo</name>
  <version>0.0.0</version>
  <description>The commucation_yolo package</description>

  <maintainer email="zhanghaolan7@gmail.com">robot</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
